[package]
name = "wifipassdump"
version = "0.1.0"
description = "Extracts saved WiFI creds from Windows"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.56.0"

features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Foundation_Collections",
    "Win32_NetworkManagement_WiFi",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[profile.release]
strip = "symbols"
