[package]
name = "wifipassdump"
version = "0.1.0"
description = "Extracts saved WiFI creds from Windows"
edition = "2021"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.8", features = ["derive"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.57.0"

features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Foundation_Collections",
    "Win32_NetworkManagement_WiFi",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[profile.release]
strip = "symbols"
